[gd_scene load_steps=4 format=3 uid="uid://yc0o7ut0kww5"]

[ext_resource type="Script" path="res://EnemyStuff/Projectiles/enemy_projectile.gd" id="1_vu4wr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_flff7"]

[sub_resource type="CanvasTexture" id="CanvasTexture_i8d6r"]

[node name="EnemyProjectile" type="Area2D"]
script = ExtResource("1_vu4wr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_flff7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-4.76837e-07, 0)
scale = Vector2(16.1719, 16.1641)
texture = SubResource("CanvasTexture_i8d6r")

[node name="ExistingTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ExistingTimer" to="." method="_on_existing_timer_timeout"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
